2005-10-29  Dennis Cranston  <dennis_cranston@yahoo.com>

	* data/pessulus.glade:  Basic GNOME HIG fixes.

2005-10-28  Benoît Dejean  <benoit@placenet.org>

	* configure.ac:
	* po/fr.po: Added French translation.

2005-09-23  Adam Weinberger  <adamw@gnome.org>

	* configure.ac: Added en_CA to ALL_LINGUAS.

2005-09-16  Funda Wang  <fundawang@linux.net.cn>

	* configure.ac (ALL_LINGUAS): Added "zh_CN".

2005-09-15  Danilo Šegan  <danilo@gnome.org>

	* configure.ac (ALL_LINGUAS): Added "sr", "sr@Latn".

2005-09-15  Vincent Untz  <vuntz@gnome.org>

	Simplify the "safe protocols" edition

	* Pessulus/Makefile.am: add simpleeditabletreeview.py
	* Pessulus/simpleeditabletreeview.py: new generic simple editable
	treeview object (it's not a widget)
	* Pessulus/maindialog.py: remove lots of "safe protocols" things,
	move some code around (to __init_safeprotocols() and
	__init_mandatory ())
	* Pessulus/safeprotocols.py: simplify a lot since we're now using
	simpleeditabletreeview: we just need to connect to this object's
	"changed" signal
	* data/pessulus.glade: remove the old "add safe protocol" dialog and
	add an "edit" button

	* Pessulus/disabledapplets.py: make code more readable,
	(__on_notified): don't always update (this didn't work as intended, in
	fact)
	* Pessulus/gconfcheckbutton.py: add "Warning" to a string

2005-09-13  Vincent Untz  <vuntz@gnome.org>

	* Pessulus/maindialog.py: set sensitivity of the "safe protocols"
	widgets at startup

2005-09-13  Vincent Untz  <vuntz@gnome.org>

	* configure.ac: post-release bump to 0.2.

==================== 0.1 ====================

2005-09-13  Vincent Untz  <vuntz@gnome.org>

	Release 0.1.

2005-09-13  Vincent Untz  <vuntz@gnome.org>

	* .cvsignore:
	* py-compile: kill py-compile

2005-09-13  Vincent Untz  <vuntz@gnome.org>

	Initial import.